--- a/trunk/Containerfile
+++ b/trunk/Containerfile
@@ -7,6 +7,7 @@ ARG OVSREPO=https://github.com/openvswitch/ovs.git
 ARG OVSBRANCH=master
 ARG OVNREPO=https://github.com/openvswitch/ovn.git
 ARG OVNBRANCH=master
+ARG CFLAGS="-g -O2"
 
 VOLUME ["/gitcache"]
 
@@ -16,13 +17,13 @@ RUN git clone --reference-if-able /gitcache/ovn.git $OVNREPO -b $OVNBRANCH
 
 WORKDIR /root/ovs
 RUN ./boot.sh && \
-    ./configure --prefix=/opt --localstatedir=/var --sysconfdir=/etc CFLAGS="-g -O2" && \
+    ./configure --prefix=/opt --localstatedir=/var --sysconfdir=/etc CFLAGS="$CFLAGS" && \
     make -j4 && \
     make install
 
 WORKDIR /root/ovn
 RUN ./boot.sh && \
-    ./configure --prefix=/opt --localstatedir=/var --sysconfdir=/etc CFLAGS="-g -O2" \
+    ./configure --prefix=/opt --localstatedir=/var --sysconfdir=/etc CFLAGS="$CFLAGS" \
         --with-ovs-source=/root/ovs && \
     make -j4 && \
     make install
